# sensor-planner

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md  build-and-run.md  debugging-guide.md  frontend-to-embedded.md  geospatial-and-radar-glossary.md  references.md  troubleshooting.md
exercises/: README.md
exercises/cpp/: range_exercises.cpp
exercises/java/: RankingExercises.java
exercises/python/: validation_exercises.py
exercises/solutions/: solution-notes.md
learning/: day-01-compilation-and-syntax.md  day-02-structs-classes-and-files.md  day-03-references-pointers-and-lifetime.md  day-04-standard-library.md  day-05-cmake-testing-debugging.md  day-06-java-refresh.md  day-07-spring-boot-maven-rest.md  day-08-python-refresh.md  day-09-cpp-planner.md  day-10-file-ingestion.md  day-11-java-api.md  day-12-python-harness.md  day-13-containers-devsecops.md  day-14-domain-review.md
planner-core/: CMakeLists.txt
planner-core/include/planner/: Input.hpp  Models.hpp  Planner.hpp
planner-core/sample-data/: scenario.csv  scenario.json  scenario.xml
planner-core/src/: Input.cpp  Planner.cpp  main.cpp
planner-core/tests/: PlannerTests.cpp
planner-service/: pom.xml
planner-service/src/main/resources/: application.yml
scripts/: binary_record_example.py  call_planner_service.py  generate_scenarios.py  run_scenarios.py  scenario_models.py  validate_results.py
scripts/sample-data/: scenario.json
scripts/tests/: test_scenarios.py
(+16 files in other folders)
